[package]
name = "plygui-test"
version = "0.1.0"
authors = ["snuk182 <snuk188@gmail.com>"]
edition = "2018"

[[bin]]
name = "uitest"
path = "src/main.rs"

[patch.crates-io]
qt_ritual_build = { git = "https://github.com/snuk182/ritual.git", rev = "7b7cd06" }

[dependencies]
#plygui = {version = "0.0.1", path = "../plygui/lib", features = ["gtk3"]}
plygui = {version = "0.0.1", path = "../plygui-qt", package = "plygui-qt"}
plygui-webview = {version = "0.0.1", path = "../plygui-webview", features = ["qt5"]}
